fixed career opportunities URL. cleaned up styling for therapist list page on mobile

--- a/_sass/_meet-the-therapists.scss
+++ b/_sass/_meet-the-therapists.scss
@@ -19,7 +19,7 @@
                 padding-bottom: 1rem;
             }
             p{
-                padding-top: 2rem;
+                // padding-top: 2rem;
                 color: white;
                 font-size: 1.25rem;
                 line-height: 1.5rem;
@@ -29,15 +29,17 @@
     
     
     &__list{
-        padding-top: 2rem;
-
-        h3{
-                padding-bottom: 1rem;
-        }
+        // padding-top: 1rem;
+        
 
         ul{
             list-style-type: none;
+            line-height: 1.5rem;
             padding: 2rem;
+
+            li {
+                word-break: break-all;
+            }
         }
     }
 
